# redirector

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.redirector  Makefile  README.md  build.rs  docker-compose.yml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  zshrc
.devcontainer/ext/: dynamic.yaml  nginx-redirect.conf  traefik.yaml  zshrc
.devcontainer/ext/traefik-conf/: dynamic.yaml
config/: config.yaml
scripts/: colors.sh  rabbitmq.sh  reset-permissions.sh  run.sh
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  util.rs
src/cli/: mod.rs  serve.rs  version.rs
src/server/: header_parser.rs  mod.rs  redirect.rs  redirect_middleware.rs  server.rs  test_helpers.rs  traefik_data.rs
