[package]
name = "redirector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "util"] }
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "http2",
  "multipart",
  "default-tls",
] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }

serde_yaml = "0.9"
thiserror = "1.0"
anyhow = { version = "1.0.91", features = ["backtrace"] }
http-body-util = "0.1"
bytes = "1.8.0"
metrics = "0.24.0"
prometheus = "0.13.4"
axum-prometheus = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
hyper = "1.0"
vergen-git2 = "1.0.1"
clap = { version = "4.5.20", features = ["derive"] }


[dev-dependencies]
lazy_static = "1.5.0"
mockito = "1.5.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
hyper = "1.0"

[build-dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
# All features enabled
vergen-git2 = { version = "1.0.0", features = ["build", "si"] }
chrono = "0.4"


[profile.release]
lto = true
opt-level = 3
strip = true
panic = "abort"
codegen-units = 1
incremental = false

[profile.dev]
opt-level = 0
debug = true
